Fixed cropping of MathJax formulas on some browsers

--- a/src/assets/stylesheets/main/extensions/pymdownx/_arithmatex.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_arithmatex.scss
@@ -41,7 +41,6 @@
       width: min-content;
       margin: 1em auto !important;
       padding: 0 px2rem(16px);
-      overflow: auto;
       touch-action: auto;
     }
   }
